# Portal3

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
Dependencies/Assimp/lib/Debug/: assimp-vc142-mtd.exp
Dependencies/Assimp/lib/Release/: assimp-vc142-mt.exp
Dependencies/Bullet/lib/debug/: LinearMath_Debug.lib
Dependencies/Bullet/lib/release/: BulletCollision.lib  BulletDynamics.lib  LinearMath.lib
Dependencies/GLAD/src/: glad.cpp
Prefabs/: Wall.json  cube.json  portalbutton.json  portalturret.json
Scene/: MainLevel.json  MainLevelUnlit.json
Source/include/: Application.h  SceneLoader.h  UIManager.h
Source/include/Core/DataStructure/: GameObject.h  ISerializable.h  InteractibleObject.h  PhysicsObject.h  Scene.h
Source/include/Core/DataStructure/Objects/: Button.h  CompanionCube.h  Door.h  Empty.h  Floor.h  Light.h  Platform.h  Player.h  Portal.h  Radio.h  Turret.h
Source/include/Core/Debug/: Assertion.h  Log.h  PhysicDebugDrawer.h
Source/include/LowRenderer/: Camera.h  Light.h  Mesh.h
Source/include/Physics/: PhysicsEngine.h  RigidBody.h
Source/include/Resources/: Model.h  RessourceManager.h  Shader.h  Texture.h
Source/include/Sound/: Music.h  SoundEngine.h
Source/shaders/: BasicVertex.glsl  LitFrag.glsl  UnlitFrag.glsl
Source/shaders/Fragment/: CrosshairFragment.glsl  LitFragment.glsl  PDebugFragment.glsl  PortalFragment.glsl  UnlitFragment.glsl
Source/shaders/Vertex/: CrosshairVertex.glsl  LitVertex.glsl  PDebugVertex.glsl  UnlitVertex.glsl
Source/src/: Application.cpp  SceneLoader.cpp  UIManager.cpp
Source/src/Core/DataStructure/: GameObject.cpp  InteractibleObject.cpp  PhysicsObject.cpp
Source/src/Core/DataStructure/Objects/: Button.cpp  CompanionCube.cpp  Door.cpp  Empty.cpp  Floor.cpp  Light.cpp  Platform.cpp  Player.cpp  Portal.cpp  Radio.cpp  Turret.cpp
Source/src/Core/Debug/: Log.cpp  PhysicDebugDrawer.cpp
Source/src/LowRenderer/: Camera.cpp  Light.cpp  Mesh.cpp
Source/src/Physics/: PhysicsEngine.cpp  RigidBody.cpp
Source/src/Resources/: Model.cpp  RessourceManager.cpp  Shader.cpp  Texture.cpp
Source/src/Sound/: Music.cpp  SoundEngine.cpp
assets/Panel/: Panel.fbx
assets/Ultimate Modular Sci-Fi/FBX/: Column_1.fbx  Door_Single.fbx
assets/aperture_radio/: radio_wrapped_meshfixes.fbx
assets/portal_gun/: PortalGun.FBX
assets/portal_turret/: portalturret.mtl
assets/portalbutton/: portalbutton.mtl
fichierRemise/: HackAndPlan.txt  VideoURL.txt
maths/LibMaths/LibMaths/: LibMaths.vcxproj  LibMaths.vcxproj.filters
maths/LibMaths/LibMaths/Mat2/: Mat2.h
maths/LibMaths/LibMaths/Mat3/: Mat3.h
maths/LibMaths/LibMaths/Mat4/: Mat4.h
maths/LibMaths/LibMaths/Shapes2D/: Shapes2D.h
maths/LibMaths/LibMaths/Vec3/: Vec3.h
maths/LibMaths/LibMaths/Vec4/: Vec4.h
